--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,18 @@
-* {
+body {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
-  }
-
-ul, ol {
-    list-style: none;
-  }
-
-a {
-  text-decoration: none;
-  color: inherit;
 }
 
+.accept-policy-box {
+    
+}
+
+.accept-policy {
+    
+}
+
+.error-message-register-checkbox {
+    color: red;
+    font-size: 1em;
+}
+  
