--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,27 @@ body {
     text-decoration: none;
 }
 
+::-webkit-scrollbar {
+    width: 20px;
+ 
+  }
+  
+::-webkit-scrollbar-track {
+    background-color: transparent;
+ 
+  }
+::-webkit-scrollbar-thumb {
+    background-color: var(--mockup-color);
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+    transition: background-color 0.3s ease-in-out;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--mockup-highlight);
+}
+
 .filled-btn, 
 .white-btn {
     border-radius: 8px;
@@ -29,6 +50,7 @@ body {
     border: 1px solid var(--mockup-color);
     transition: all 200ms ease-in-out;
 }
+
 .filled-btn {
     background-color: var(--mockup-color);
     color: white;
@@ -65,7 +87,7 @@ body {
 }
 
 .login-input-error { 
-    border: 1px solid #971010;
+    border: 1px solid #ff3333;
 }
 
 input::placeholder {
