--- a/css/contacts.css
+++ b/css/contacts.css
@@ -32,7 +32,7 @@
     height: 32px;
     border-radius: 56px;
     border: 0;
-    color: white;
+    color: var(--white-color);
     font-weight: bold;
     font-size: 24px;
     background-color: var(--mockup-color);
@@ -43,12 +43,12 @@
 }
 
 .addContactH1Mobile {
-    color: white;
+    color: var(--white-color);;
     font-size: 3rem;
 }
 
 .addContactTextMobile {
-    color: white;
+    color: var(--white-color);;
 }
 
 .addContactBlueStrokedMobile {
@@ -68,12 +68,12 @@
     align-items: center;
     flex-direction: column;
     height: 50vh;
-    background-color: white;
+    background-color: var(--white-color);
     gap: 20px;
 }
 
 .addContactInputNameMobile {
-    border: 1px solid #d1d1d1;
+    border: 1px solid var(--placeholder-color);
     border-radius: 5px;
     background-image: url("../assets/img/contacts/addContactUserNameImg.svg");
     background-size: 30px auto;
@@ -88,7 +88,7 @@
 }
 
 .addContactInputMailAddresssMobile {
-    border: 1px solid #d1d1d1;
+    border: 1px solid var(--placeholder-color);
     border-radius: 5px;
     background-image: url("../assets/img/contacts/addContactMailIcon.svg");
     background-size: 30px auto;
@@ -103,7 +103,7 @@
 }
 
 .addContactInputPhoneMobile {
-    border: 1px solid #d1d1d1;
+    border: 1px solid var(--placeholder-color);
     border-radius: 5px;
     background-image: url("../assets/img/contacts/addContactPhoneIcon.svg");
     background-size: 30px auto;
@@ -120,3 +120,60 @@
 .createContactButtonImg {
     height: 51px;
 }
+
+.letterAndContactsContainer {
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    border-bottom: 2px solid var(--placeholder-color);
+    padding-bottom: 10px;
+}
+
+.letter-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.contact-first-letter {
+    margin: 0;
+}
+
+.oneContactContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1em;
+    cursor: pointer;
+}
+
+.contact-info-container {
+    display: flex;    
+    flex: 1;
+    margin-left: 3em;
+    cursor: pointer;
+    padding: 15px 24px 15px 24px;
+}
+
+.oneContactContainerH2Desktop {
+    color: var(--placeholder-color);
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.oneContactContainerAElement {
+    color: var(--hyper-link-color);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.openContactUserImgMobile {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+    border: 2px solid white;
+  }
