--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --black-color: #000000;
     --hyper-link-color: #007cee;
     --err-msg-color: #ff3333;
+    --white-grey: #f6f7f8;
 }
 
 body {
