--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,4 @@
 header {
-    width: 100vw;
-    height: 180px;
     position: fixed;
     top: 0;
     left: 0;
@@ -14,21 +12,16 @@ header {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    padding-top: 45px;
-    padding-left: 36px;
-    padding-bottom: 45px;
-    padding-right: 36px;
-
+    padding: 20px 16px;
 }
-  
-   
+     
 .header-logo {
-    width: 72px;
+    width: 32px;
 }
 
 .header-profil {
-    width: 90px;
-    height: 90px;
+    width: 40px;
+    height: 40px;
     border-style: solid;
     border-width: 2px;
     border-radius: 50px;
