new footer version

--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -1,19 +1,20 @@
 
 <footer>
-    <div>
-        <div class="footer-complet">
-            <div class="footer-icon-box">
-                <a href="/summary.html" class="footer-link"><img src="/assets/img/Summary_Icons.png" alt="Summary" class="footer-icon"> <span> Summary </span></a>
-            </div>
-            <div class="footer-icon-box">
-                <a href="/board.html" class="footer-link"><img src="/assets/img/Board_Icons.png" alt="Board" class="footer-icon">Board</a>
-            </div>
-            <div class="footer-icon-box">
-                <a href="/add_task.html" class="footer-link"><img src="/assets/img/Add_Tasks_Icon.png" alt="Add Tasks" class="footer-icon">Add Tasks</a>
-            </div>
-            <div class="footer-icon-box">
-                <a href="/contacts.html" class="footer-link"><img src="/assets/img/Contacts_Icons.png" alt="Contacts" class="footer-icon">Contacts</a>
-            </div>
+    <div class="footer-complet">
+        <div class="footer-icon-box">
+            <a href="/summary.html" class="footer-link"><img src="/assets/img/Summary_Icons.png" alt="Summary" class="footer-icon"> <span> Summary </span></a>
+        </div>
+        <div class="footer-icon-box">
+            <a href="/board.html" class="footer-link"><img src="/assets/img/Board_Icons.png" alt="Board" class="footer-icon">Board</a>
+        </div>
+        <div class="footer-icon-box">
+            <a href="/add_task.html" class="footer-link">
+                <img src="/assets/img/Add_Tasks_Icon.png" alt="Add Tasks" class="footer-icon">
+                Add Tasks
+            </a>
+        </div>
+        <div class="footer-icon-box">
+            <a href="/contacts.html" class="footer-link"><img src="/assets/img/Contacts_Icons.png" alt="Contacts" class="footer-icon">Contacts</a>
         </div>
     </div>
 </footer>
