contacts.js function hideHeaderAndFooter() and function showHeaderAndFooter() added

--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -1,5 +1,5 @@
 
-<footer>
+<footer class="footerCLass">
     <div class="footer-complet">
         <div class="footer-icon-box">
             <a href="/summary.html" class="footer-link"><img src="/assets/img/Summary_Icons.png" alt="Summary" class="footer-icon"> <span> Summary </span></a>
