drop down menü now slide in from right to the left and is over the button not under anymore

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -342,7 +342,8 @@
 
 .dropdown-triggerContainer {
     display: flex;
-    flex-direction: row-reverse;   
+    flex-direction: row-reverse;
+    margin-right: 30px; 
 }
 
 .dropdown-trigger {
@@ -355,15 +356,14 @@
 }
 
 .dropdown-menu {
-    /* position: absolute; */
-    display: none;
-    right: -300px;
+    position: absolute;
+    left: 100%; /* Startposition außerhalb des Bildschirms */
     top: 5em;
     border-radius: 15px;
     background-color: var(--white-color);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    animation: slide-in-menu 0.3s ease forwards;
     overflow-x: hidden;
+    animation: slide-in-menu 0.3s ease forwards;
 }
 
 .dropdown-menu.slide-in {
@@ -373,11 +373,10 @@
 
 @keyframes slide-in-menu {
     from {
-      right: -300px;
-      display: block;
+        left: 100%; /* Startposition außerhalb des Bildschirms */
     }
     to {
-      right: 1em;
+        left: 0; /* Endposition am linken Rand */
     }
 }
 
