user  registration to  backend works,  login work in progress

--- a/css/register_style.css
+++ b/css/register_style.css
@@ -115,8 +115,12 @@
     border-radius: 50%;
     text-align: center;
     margin-right: 4px;
-  }
-  
+}
+
+.margin-right {
+    margin-right: 9px;
+}
+
 .tooltip .tooltiptext {
     visibility: hidden;
     width: 285px;
@@ -132,6 +136,10 @@
     margin-left: -60px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
+
+.tooltiptext-small {
+    width: 248px !important;
+}  
 
 
 .tooltiptext ul {
