header.css class header background-color: var(--white-color); added because the header was transparent and y-scroll removed when one contact was clicked and y-scroll added when back to render contacts

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,3 +1,11 @@
+.contactsContent {
+    
+}
+
+.allContacts {
+    overflow-y: auto;
+}
+
 .addContactButtonContainerMobile {
     display: flex;
     justify-content: flex-end;
@@ -519,3 +527,4 @@
 .cancelContactDesktopDeleteButtonConfirmationContainerMobile {
     margin-top: 1.5rem;
 }
+
