--- a/css/contacts.css
+++ b/css/contacts.css
@@ -5,7 +5,8 @@
 .allContacts {
     position: relative;
     overflow-y: auto;
-    margin-top: 120px;
+    padding-top: 100px; /* Platz für den Header */
+    padding-bottom: 60px; /* Platz für den Footer */
 }
 
 .addContactButtonContainerMobile {
@@ -195,13 +196,17 @@
 
 /* Open Contakt Overlay Mobile */
 
+.overlay  {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
 .openContactContainerHeader {
     display: flex;
     background-color: var(--white-grey);
     height: 20vh;
-    padding-top: 2em;
-    margin-left: 1em;
-    margin-top: 80px;
+    padding-top: 2em;    
 }
 
 .openContactCloseXContainer {
@@ -212,6 +217,7 @@
 
 .openContactBlockHeader {
     display: flex;
+    margin-left: 1em;
 }
 
 .openContactH1 {
