added  assigned to toggling, but still WOP

--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,7 @@ textarea::placeholder {
 .input_global:focus-within {
     border-color: var(--mockup-highlight); 
 }
+
+.d-none {
+    display: none;
+}
