contacts.css class .dropdown-option:hover background-color: var(--mockup-highlight); changed

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -402,7 +402,7 @@
 
 .dropdown-option:hover {
     cursor: pointer;
-    background-color: var(--light-blue);
+    background-color: var(--mockup-highlight);
 }
 
 #contactOptionsDropdownContainer {    
