--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@ header {
     left: 0;
     right: 0;
     z-index: 100;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);  /* box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px; */
     background-color: var(--white-color);
 }
 
