--- a/css/contacts.css
+++ b/css/contacts.css
@@ -549,12 +549,7 @@
 
 @media only screen and (max-width: 4000px) and (min-width: 760px) {
     .contactsContent {
-        background-color: var(--white-color);
-        overflow-x: hidden;
-        position: relative;    
-        min-width: 30%;
-        height: 91vh;
-        overflow-y: scroll;
+        display: none!important;
     }
 
     .footerCLass {
