--- a/assets/templates/desktop_footer.html
+++ b/assets/templates/desktop_footer.html
@@ -5,25 +5,25 @@
             <img src="/assets/img/footer_logo.png" alt="Join Logo">
         </div>
 
-        <div class="menu-box">
-            <div class="footer-icon-box">
-                <a href="/summary.html" class="footer-link"><img src="/assets/img/summary_Icons.png" alt="Summary" class="footer-icon"> 
+        <div class="desktop-menu-box">
+            <div class="desktop-footer-icon-box">
+                <a href="/summary.html" class="desktop-footer-link"><img src="/assets/img/summary_Icons.png" alt="Summary" class="desktop-footer-icon"> 
                     Summary
                 </a>
             </div>
-            <div class="footer-icon-box">
-                <a href="/board.html" class="footer-link"><img src="/assets/img/Board_Icons.png" alt="Board" class="footer-icon">
+            <div class="desktop-footer-icon-box">
+                <a href="/board.html" class="desktop-footer-link"><img src="/assets/img/Board_Icons.png" alt="Board" class="desktop-footer-icon">
                     Board
                 </a>
             </div>
-            <div class="footer-icon-box">
-                <a href="/add_task.html" class="footer-link">
-                    <img src="/assets/img/Add_Tasks_Icon.png" alt="Add Tasks" class="footer-icon">
+            <div class="desktop-footer-icon-box">
+                <a href="/add_task.html" class="desktop-footer-link">
+                    <img src="/assets/img/Add_Tasks_Icon.png" alt="Add Tasks" class="desktop-footer-icon">
                     Add Tasks
                 </a>
             </div>
-            <div class="footer-icon-box">
-                <a href="/contacts.html" class="footer-link"><img src="/assets/img/Contacts_Icons.png" alt="Contacts" class="footer-icon">
+            <div class="desktop-footer-icon-box">
+                <a href="/contacts.html" class="desktop-footer-link"><img src="/assets/img/Contacts_Icons.png" alt="Contacts" class="desktop-footer-icon">
                     Contacts
                 </a>
                 </div>
@@ -31,9 +31,9 @@
         </div>
 
        
-        <div class="data-box">
-            <a href="/privacy_policy.html" class="data-link">Privacy Policy</a>
-            <a href="/legal_notice.html" class="data-link">Legal notice</a>
+        <div class="desktop-data-box">
+            <a href="/privacy_policy.html" class="desktop-data-link">Privacy Policy</a>
+            <a href="/legal_notice.html" class="desktop-data-link">Legal notice</a>
         </div>
         
     </div>
