contacts2.js function createOneContactContainer(oneContact) now save the color code and async function addContactToCurrentUser(newContact) render now the saved color code

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -550,6 +550,9 @@
     display: none;
 }
 
+.addContactButtonContainerDesktop {
+    display: none;
+}
 
 /* Desktop view */
 /*-----------------------------------------------------------------------------------------------------------------------*/
@@ -571,7 +574,7 @@
     }
 
     .addContactButtonImgMobile {
-        display: none!important;
+        
     }
 
     .contactsContentContainerDesktop {
